@@ -1,6 +1,9 @@
 Release 1.0 (in development)
 ============================
 
+* #280: Autodoc can now document instance attributes assigned in
+  ``__init__`` methods.
+
 * Added ``alt`` option to ``graphviz`` extension directives.
 
 * Added Epub builder.
